# QT

./: README.md
Assignment-II/: CMakeLists.txt  DeviceDetails.cpp  DeviceDetails.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  service.cpp
Assignment-II/services/: CMakeLists.txt  newservice.cpp  newservice.h  service.cpp  service.h
Calculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Episode3/: CMakeLists.txt  main.cpp
Form/: CMakeLists.txt  PersonClass.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LibraryManagement/: Book.h  CMakeLists.txt  assignmanager.cpp  assignmanager.h  assignmanager.ui  bookdetails.cpp  bookdetails.h  bookdetails.ui  bookmanager.cpp  bookmanager.h  bookreturndialog.cpp  bookreturndialog.h  bookreturndialog.ui  dialog.cpp  dialog.h  dialog.ui  librarylogs.cpp  librarylogs.h  librarylogs.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Minimal/: Minimal.pro  QDir.cpp  QFile.cpp  QGridLayout.cpp  main.cpp
Practice/: CMakeLists.txt  SumMock.h  SumTest.cpp  main.cpp
Practice/Display/: CMakeLists.txt  display.cpp  display.h  newdisplay.cpp  newdisplay.h
Practice/SumService/: CMakeLists.txt  sum.cpp  sum.h
Sample/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
VehicleDashboard/: CMakeLists.txt  addoperatordialog.cpp  addoperatordialog.h  addoperatordialog.ui  images.qrc  main.cpp  usersettingsdialog.cpp  usersettingsdialog.h  usersettingsdialog.ui  vehicledashboard.cpp  vehicledashboard.h  vehicledashboard.ui  vehicleinstrumentpanel.cpp  vehicleinstrumentpanel.h  vehicleinstrumentpanel.ui
VehicleDashboard/DataBase/: CMakeLists.txt  database.cpp  database.h
VehicleDashboard/DataProvider/: CMakeLists.txt  dataprovider.cpp  dataprovider.h
VehicleDashboard/models/: CMakeLists.txt  userModel.cpp  userModel.h  vehicleInfoModel.cpp  vehicleInfoModel.h
VehicleDashboard/tests/: CMakeLists.txt  dataProviderClassTests.cpp
VehicleHealthMonitorSystem/: CMakeLists.txt  FilterGoogleTest.cpp  FluidGoogleTest.cpp  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
VehicleHealthMonitorSystem/Models/: CMakeLists.txt  filtermodel.cpp  filtermodel.h  fluidmodel.cpp  fluidmodel.h
build-Assignment-II-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Assignment-II-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Assignment-II-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Assignment-II-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Assignment-II_autogen/: deps
build-Assignment-II-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/services/: cmake_install.cmake
build-Calculator-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Calculator-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Calculator-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Calculator-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Calculator_autogen/: deps
build-Episode3-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Episode3-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Episode3-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Episode3-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Episode3_autogen/: deps
build-Form-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Form-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Form-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Form-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Form_autogen/: deps
build-LibraryManagement-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake
build-LibraryManagement-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-LibraryManagement-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Minimal-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Sample-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-library-management-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-untitled-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-untitled1-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-untitled3-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
library-management/: CMakeLists.txt  Library.h  LibraryUse.cpp  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
untitled1/: CMakeLists.txt  mainwindow.cpp
untitled3/: Main.cpp  untitled3.pro
(+301 files in other folders)
